# flutter-faac-encoding

./: README.md  pubspec.yaml
android/app/: build.gradle
lib/: main.dart  test_rec_snd.dart  wsecho.dart
native_src/: CMakeLists.txt  pubspec.yaml
native_src/cpp/: thor_aac.c  thor_ffis.cpp
native_src/lib/: native_src.dart
